add readme（translation）